--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-<html>
-<body>
-<h1>Hi!</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title>Let's know about Mr.Clay</title>
+    <link rel="style.css" href="style.css">
+  </head>
+  <body>
+    <h1>Let us know about Mr. Moulder Clay</h1>
+    <br>
+    <p>Click on the button corresponding to part of his life you want to know</p>
+    <br><hr>
+    <button onclick="document.location='EarlyLife.html'">Early Life</button>
+    <br>
+    <button onclick="document.location='Education.html'">Education</button>
+    <br>
+    <button onclick="document.location='Works.html'">Works</button>
+    <br>
+    <button onclick="document.location='Recogitions.html'">Recognitions</button>
+  </body>
 </html>
+    
+    
