--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Let's know about Mr.Clay</title>
-    <link rel="style.css" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Let us know about Mr. Moulder Clay</h1>
