--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <br>
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-    <button onclick="document.location='EarlyLife.html'">Early Life</button>
+    <h2><button onclick="document.location='EarlyLife.html'">Early Life</button></h2>
     <br>
-    <button onclick="document.location='Education.html'">Education</button>
+    <h2><button onclick="document.location='Education.html'">Education</button></h2>
     <br>
-    <button onclick="document.location='Works.html'">Works</button>
+    <h2><button onclick="document.location='Works.html'">Works</button></h2>
     <br>
-    <button onclick="document.location='Recogitions.html'">Recognitions</button>
+    <h2><button onclick="document.location='Recogitions.html'">Recognitions</button></h2>
   </body>
 </html>
     
