--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <button onclick="document.location='Works.html'">Works</button>
     <br>
-    <button onclick="document.location='Recogitions.html'">Recognitions</button>
+    <button onclick="document.location='Recognition.html'">Recognition</button>
   </body>
 </html>
     
