--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -9,7 +9,7 @@
 <p>Born on 29th Feb of 2000, at a gloomy place called Hakooma.</p>
 <br>
 <h1>Family</h1>
-<p>He lived with his mom shieten, dad boratam and a dog named Karuin. Mom is a home-maker and dad serves in the army.</p>
+<p>He lived with his mom Shieten, dad Boratam and a dog named Karuin. Mom is a home-maker and dad serves in the army.</p>
 <br>
 </body>
 </html>
