--- a/Education.html
+++ b/Education.html
@@ -2,14 +2,15 @@
 <html lang="en-US">
 <head>
 <title>Education of Mr. Moulder Clay</title>
+<link href="style1.css">
 </head>
 <body>
-<h1>Schooling</h1>
+<h1><b>Schooling</b></h1>
 <br>
-<p>Moulder studied in various Army schools across the country.</p>
+<p>Moulder studied in various <i>Army schools</i> across the country.</p>
 <br>
 <h1>College life</h1>
-<p>He graduated from Injyutium Institue of Technology, Hakooma with a degree in Physics and did his post graduation in the same field from Maqution Institute of Technology.</p>
+<p>He graduated from <abbr title="Injyutium Institue of Technology, Hakooma">IIT-H</abbr> with a degree in Physics and did his post graduation in the same field from <abbr title="Maqution Institute of Technology">MIT.</abbr></p>
 <br>
 </body>
 </html>
