--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
 <br>
 <p>Moulder studied in various <i>Army schools</i> across the country.</p>
 <br>
-<h1><b>College life</b></h1>
+<h1><strong>College life</strong></h1>
 <p>He graduated from <abbr title="Injyutium Institue of Technology, Hakooma">IIT-H</abbr> with a degree in Physics and did his post graduation in the same field from <abbr title="Maqution Institute of Technology">MIT.</abbr></p>
 <br>
 </body>
