--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
 <title>Early life of Mr. Moulder Clay</title>
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
 <h1>Birth</h1>
@@ -10,6 +11,12 @@
 <br>
 <h1>Family</h1>
 <p>He lived with his mom Shieten, dad Boratam and a dog named Karuin. Mom is a home-maker and dad serves in the army.</p>
-<br>
+<h3>Address</h3>
+<address>
+#Hi-Pit no. 12<br>
+Falcon street<br>
+Hakooma<br>
+United India
+</address>
 </body>
 </html>
