--- a/Works.html
+++ b/Works.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
 <title>Notable works Mr. Moulder Clay</title>
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 <h1><ins>Notable work:</ins></h1>
