--- a/Works.html
+++ b/Works.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
 <title>Notable works Mr. Moulder Clay</title>
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<h1><ins>Notable work:</ins></h1>
+<h1><ins>Notable work</ins></h1>
 <br>
-<p>Moulder worked on many small projects but the most important one is <em>"Time Machine"</em>, which he completed in the year of <small>2069</small>. </p>
+<p>Moulder worked on many small projects but the most important one is "Time Machine", which he completed in the year of 2069. </p>
 </body>
 </html>
-
