--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <br>
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
+    <div>
     <button onclick="document.location='EarlyLife.html'">Early Life</button>
-    <br>
+    <br><br>
     <button onclick="document.location='Education.html'">Education</button>
-    <br>
+    <br><br>
     <button onclick="document.location='Works.html'">Works</button>
-    <br>
+    <br><br>
     <button onclick="document.location='Recognition.html'">Recognition</button>
+     </div>
   </body>
 </html>
     
