--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <br>
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-    <button onclick="document.location='EarlyLife.html'">Early Life</button>
+<div>
+    <a href="EarlyLife.html"><button>Early Life</button></a>
     <br>
-    <button onclick="document.location='Education.html'">Education</button>
+     <a href="Education.html"><button>Education</button></a>
     <br>
-    <button onclick="document.location='Works.html'">Works</button>
+     <a href="Works.html"><button>Works</button></a>
     <br>
-    <button onclick="document.location='Recognition.html'">Recognition</button>
+     <a href="Recognition.html"><button>Recognition</button></a>
+</div>
   </body>
 </html>
     
