--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 <title>Early life of Mr. Moulder Clay</title>
@@ -11,6 +11,9 @@
 <br>
 <h1>Family</h1>
 <p>He lived with his mom Shieten, dad Boratam and a dog named Karuin. Mom is a home-maker and dad serves in the army.</p>
+  <center>
+    <img scr="Moulder.jpg" alt="Moulder" style="width:100px;height:100px">
+  </center>
 <h3>Address</h3>
 <address>
 #Hi-Pit no. 12<br>
