--- a/Education.html
+++ b/Education.html
@@ -11,5 +11,6 @@
 <br>
 <h1><strong>College life</strong></h1>
 <p>He graduated from <abbr title="Injyutium Institue of Technology, Hakooma">IIT-H</abbr> with a degree in Physics and did his post graduation in the same field from <abbr title="Maqution Institute of Technology">MIT.</abbr></p>
-</body>
+<img src="ArmySchool.jpg" alt="Moulder's School" style="width:350;height:275">
+  </body>
 </html>
