--- a/Recognition.html
+++ b/Recognition.html
@@ -13,7 +13,7 @@ body {
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <h1><i>Recognition even before discovery? Strange...</i><h1>
+  <h1><i>Recognition even before discovery? Strange...</i></h1>
 <p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website.</p>
 <br>
 <a href="https://shiv-pt.github.io/">This is the link to that website is here.</a>
