--- a/Recognition.html
+++ b/Recognition.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
- <style>
+<style>
 body {
   background-image: url('Weird.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   background-size: 100% 100%;
+  ocacity: 0.4;
 }
 </style>
 <head>
 <title>Recognition to Mr. Moulder Clay</title>
-<link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <h1><i>Recognition even before discovery? Strange...</i></h1>
-<p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website.</p>
+<h1><i>Recognition even before discovery? Strange...</i></h1>
 <br>
-<a href="https://shiv-pt.github.io/">This is the link to that website is here.</a>
+<p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the global pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website, after travelling back in time to the year 2020, which was also coincidentally.</p>
+<br>
+<p><a href="https://shiv-pt.github.io/" style="color:White">This is the link to that website.</a></p>
 </body>
 </html>
 
