--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -10,7 +10,7 @@
 <p>Born on 29th Feb of 2000, at a gloomy place called Hakooma.</p>
 <br>
 <h1>Family</h1>
-<p>He lived with his mom Shieten, dad Boratam and a dog named Karuin. Mom is a home-maker and dad serves in the army.</p>
+<p>He lived with his mom Shieten Clay, dad Boratam Clay and a dog named Karuin. Mom was a home-maker and dad served in the army.</p>
   <center>
     <img src="Moulder.jpg" alt="Moulder" style="width:250px;height:300px">
   </center>
