--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
 <div>
-    <a href="EarlyLife.html"><button style="background-color:RGB(100,150,300)">Early Life</button></a>
+    <a href="EarlyLife.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Early Life</button></a>
     <br><br><br>
-     <a href="Education.html"><button style="background-color:RGB(100,150,300)" >Education</button></a>
+     <a href="Education.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;" >Education</button></a>
     <br><br><br>
-     <a href="Works.html"><button style="background-color:RGB(100,150,300)">Works</button></a>
+     <a href="Works.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Works</button></a>
     <br><br><br>
-     <a href="Recognition.html"><button style="background-color:RGB(100,150,300)">Recognition</button></a>
+     <a href="Recognition.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Recognition</button></a>
 </div>
   </body>
 </html>
