--- a/Recognition.html
+++ b/Recognition.html
@@ -15,7 +15,7 @@ body {
 <body>
 <h1><i>Recognition even before discovery? Strange...</i></h1>
 <br>
-<p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the global pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website, after travelling back in time to the year 2020, which was also coincidentally.</p>
+<p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the global pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website, after travelling back in time to the year 2020.</p>
 <br>
 <p><a href="https://shiv-pt.github.io/" style="color:White">This is the link to that website.</a></p>
 </body>
