--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<meta: charset="UTF-8">
   <head>
     <title>Let's know about Mr.Clay</title>
     <link rel="stylesheet" href="style.css">
@@ -9,14 +10,15 @@
     <br>
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-<div>
-    <a href="EarlyLife.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Early Life</button></a>
-    <br><br><br>
-     <a href="Education.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;" >Education</button></a>
-    <br><br><br>
-     <a href="Works.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Works</button></a>
-    <br><br><br>
-     <a href="Recognition.html"><button style="background-color:RGB(100,150,300);font-family: Comic Sans MS;font-size:120%;">Recognition</button></a>
-</div>
+<ul>
+  <li><a class="active" href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+<center>
+<p id="p01">This website contains a fictious story about a fictious character named Mr. Moulder Clay.  </p>
+<img src="https://miro.medium.com/max/10514/1*4hBsFIH-9dq4E1i-513pfA@2x.jpeg" alt="Last_man" style="height:400px;width:400px">
+</center>
   </body>
 </html>
