--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
 </ul>
-<center>
-<p id="p01">This website contains a fictious story about a fictious character named Mr. Moulder Clay.  </p>
-<img src="https://miro.medium.com/max/10514/1*4hBsFIH-9dq4E1i-513pfA@2x.jpeg" alt="Last_man" style="height:400px;width:400px">
-</center>
+
+<p id="p01">
+<img src="https://miro.medium.com/max/10514/1*4hBsFIH-9dq4E1i-513pfA@2x.jpeg" alt="Last_man" style="float:left;height:400px;width:400px;margin-right:15px">This website contains a fictious story about a fictious character named Mr. Moulder Clay. The website creation and story writing is done by Shivam, a student of R. V. College of Engineering. This is done as a small project to learn and develop websites.</p>
+
   </body>
 </html>
