--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<meta: charset="UTF-8">
   <head>
     <title>Let's know about Mr.Clay</title>
     <link rel="stylesheet" href="style.css">
@@ -9,16 +10,15 @@
     <br>
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-<div>
-    <a href="EarlyLife.html"><button>Early Life</button></a>
-    <br>
-     <a href="Education.html"><button>Education</button></a>
-    <br>
-     <a href="Works.html"><button>Works</button></a>
-    <br>
-     <a href="Recognition.html"><button>Recognition</button></a>
-</div>
+<ul>
+  <li><a class="active" href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+
+<p id="p01">
+<img src="https://miro.medium.com/max/10514/1*4hBsFIH-9dq4E1i-513pfA@2x.jpeg" alt="Last_man" style="float:left;height:400px;width:400px;margin-right:15px">This website contains a fictious story about a fictious character named Mr. Moulder Clay. The website creation and story writing is done by Shivam, a student of R. V. College of Engineering. This is done as a small project to learn and develop websites.</p>
+
   </body>
 </html>
-    
-    
