--- a/Works.html
+++ b/Works.html
@@ -5,7 +5,19 @@
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<h1><ins>Notable work:</ins></h1>
+<h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
+    <br><br>
+    <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
+    <br><hr>
+
+<ul>
+  <li><a href="index.html">Intoduction</a></li>
+  <li><a href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+<h1 class="ran"><ins>Notable work:</ins></h1>
 <br>
 <p>Moulder worked on many small projects but the most important one is <em>"Time Machine"</em>, which he completed in the year of <small>2069</small>. </p>
   <p>About time travel and time machine from wikipedia</p>
