--- a/Recognition.html
+++ b/Recognition.html
@@ -13,7 +13,19 @@ body {
 <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-<h1><i>Recognition even before discovery? Strange...</i></h1>
+    <h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
+    <br>
+    <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
+    <br><hr>
+
+<ul>
+  <li><a href="index.html">Intoduction</a></li>
+  <li><a href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+<h2 class="ran">Recognition even before discovery? Strange...</h2>
 <br>
 <p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the global pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website, after travelling back in time to the year 2020.</p>
 <br>
