--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <p>Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
 <ul>
-  <li><a class="active" href="EarlyLife.html">Early Life</a></li>
+  <li><a href="index.html">Intoduction</a></li>
+  <li><a href="EarlyLife.html">Early Life</a></li>
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
