--- a/Education.html
+++ b/Education.html
@@ -5,11 +5,23 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<h1><b>Schooling</b></h1>
+<h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
+    <br><br>
+    <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
+    <br><hr>
+
+<ul>
+  <li><a href="index.html">Intoduction</a></li>
+  <li><a href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+<h1 class="ran"><b>Schooling</b></h1>
 <br>
 <p>Moulder studied in various <i>Army schools</i> across the country.</p>
 <br>
-<h1><strong>College life</strong></h1>
+<h1 class="ran"><strong>College life</strong></h1>
 <p>He graduated from <abbr title="Injyutium Institue of Technology, Hakooma">IIT-H</abbr> with a degree in Physics and did his post graduation in the same field from <abbr title="Maqution Institute of Technology">MIT.</abbr></p>
 <center>
   <img src="ArmySchool.jpg" alt="Moulder's School" style="width:350;height:275">
