--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -5,11 +5,24 @@
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<h1>Birth</h1>
+
+    <h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
+    <br><br>
+    <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
+    <br><hr>
+
+<ul>
+  <li><a href="index.html">Intoduction</a></li>
+  <li><a href="EarlyLife.html">Early Life</a></li>
+  <li><a href="Education.html">Education</a></li>
+  <li><a href="Works.html">Works</a></li>
+  <li><a href="Recognition.html">Recognition</a></li>
+</ul>
+<h2 class="ran">Birth</h1>
 <br>
 <p>Born on 29th Feb of 2000, at a gloomy place called Hakooma.</p>
 <br>
-<h1>Family</h1>
+<h2 class="ran">Family</h1>
 <p>He lived with his mom Shieten Clay, dad Boratam Clay and a dog named Karuin. Mom was a home-maker and dad served in the army.</p>
   <center>
     <img src="Moulder.jpg" alt="Moulder" style="width:250px;height:300px">
