--- a/Recognition.html
+++ b/Recognition.html
@@ -11,6 +11,7 @@ body {
 <head>
 <title>Recognition to Mr. Moulder Clay</title>
 <link rel="stylesheet" href="style2.css">
+
 </head>
 <body>
     <h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
@@ -30,5 +31,12 @@ body {
 <p>Mr. Moulder's work couldn't get much recognition because he was the second last person alive before he died in <mark>2069</mark> just a few hours afters completing his Time Machine. He died in the global pandemic caused by the evolved version of <q>COVID-19</q> virus that caused a pandemic even in early 2020s. The last person alive also couldn't do much to make his work recognised, except for publising it online in his first website, after travelling back in time to the year 2020.</p>
 <br>
 <p><a href="https://shiv-pt.github.io/" style="color:White">This is the link to that website.</a></p>
+<br>
+<p>Confused about present? Click the button below . . .</p>
+<center>
+<button onclick="func()">Get Day, Date & Time</button>
+<p id="test"></p>
+</center>
+<script src="script1.js"></script>
 </body>
 </html>
