--- a/Education.html
+++ b/Education.html
@@ -16,6 +16,7 @@
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
+    <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
 </ul>
 <h1 class="ran"><b>Schooling</b></h1>
 <br>
