--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -17,7 +17,13 @@
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
-  <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
+  <li class="dropdown" style="float:right">
+    <a class="dropbtn" style="background-color: Blue">Play Games</a>
+  <div class="dropdown-content">
+    <a href="game.html">Memory Game</a>
+    <a href="game2.html">Bash the Mole !</a>
+  </div>
+  </li>
 </ul>
 <h2 class="ran">Birth</h1>
 <br>
@@ -26,7 +32,7 @@
 <h2 class="ran">Family</h1>
 <p>He lived with his mom Shieten Clay, dad Boratam Clay and a dog named Karuin. Mom was a home-maker and dad served in the army.</p>
   <center>
-    <img src="Moulder.jpg" alt="Moulder" style="width:250px;height:300px">
+    <img src="Images/Moulder.jpg" alt="Moulder" style="width:250px;height:300px">
 <h3>Address</h3>
 <address>
 #Hi-Pit no. 12<br>
