--- a/Education.html
+++ b/Education.html
@@ -16,7 +16,13 @@
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
-    <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
+  <li class="dropdown" style="float:right">
+    <a class="dropbtn" style="background-color: Blue">Play Games</a>
+  <div class="dropdown-content">
+    <a href="game.html">Memory Game</a>
+    <a href="game2.html">Bash the Mole !</a>
+  </div>
+  </li>
 </ul>
 <h1 class="ran"><b>Schooling</b></h1>
 <br>
@@ -25,7 +31,7 @@
 <h1 class="ran"><strong>College life</strong></h1>
 <p>He graduated from <abbr title="Injyutium Institue of Technology, Hakooma">IIT-H</abbr> with a degree in Physics and did his post graduation in the same field from <abbr title="Maqution Institute of Technology">MIT.</abbr></p>
 <center>
-  <img src="ArmySchool.jpg" alt="Moulder's School" style="width:350;height:275">
+  <img src="Images/ArmySchool.jpg" alt="Moulder's School" style="width:350;height:275">
   </center>
   </body>
 </html>
