--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 <script src="script2.js"></script>
 </head>
 <body>
-<h1 id="fixh">Let us know about Mr. Moulder Clay</h1>
+<h1 id="fixh">Bored reading about Mr. Moulder Clay? Play games here !</h1>
     <br>
     <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
@@ -15,14 +15,20 @@
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
-  <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
+  <li class="dropdown" style="float:right">
+    <a class="dropbtn" style="background-color: Blue">Play Games</a>
+  <div class="dropdown-content">
+    <a href="game.html">Memory Game</a>
+    <a href="game2.html">Bash the Mole !</a>
+  </div>
+  </li>
 </ul>
 <p>Click on any 2 of the 12 boxes present, remeber the picture present behind it and eventually try to find pairs of such pictures.</p> 
 <h1>Score: <span id="result"></span><h1>
 <center>
 <div class="grid">
 </div>
-<center>
+</center>
 
 
 </body>
