--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
-  <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
+  <li class="dropdown" style="float:right">
+    <a class="dropbtn" style="background-color: Blue">Play Games</a>
+  <div class="dropdown-content">
+    <a href="game.html">Memory Game</a>
+    <a href="game2.html">Bash the Mole !</a>
+  </div>
+  </li>
 </ul>
 
 <p id="p01">
