--- a/Recognition.html
+++ b/Recognition.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <style>
 body {
-  background-image: url('Weird.jpg');
+  background-image: url('Images/Weird.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -25,7 +25,13 @@ body {
   <li><a href="Education.html">Education</a></li>
   <li><a href="Works.html">Works</a></li>
   <li><a href="Recognition.html">Recognition</a></li>
-  <li style="float:right"><a href="game.html" style="background-color: Blue">Play Games</a></li>
+  <li class="dropdown" style="float:right">
+    <a class="dropbtn" style="background-color: Blue">Play Games</a>
+  <div class="dropdown-content">
+    <a href="game.html">Memory Game</a>
+    <a href="game2.html">Bash the Mole !</a>
+  </div>
+  </li>
 </ul>
 <h2 class="ran">Recognition even before discovery? Strange...</h2>
 <br>
