--- a/EarlyLife.html
+++ b/EarlyLife.html
@@ -10,21 +10,22 @@
     <br><br>
     <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-
-<ul>
-  <li><a href="index.html">Intoduction</a></li>
-  <li><a href="EarlyLife.html">Early Life</a></li>
-  <li><a href="Education.html">Education</a></li>
-  <li><a href="Works.html">Works</a></li>
-  <li><a href="Recognition.html">Recognition</a></li>
-  <li class="dropdown" style="float:right">
-    <a class="dropbtn" style="background-color: Blue">Play Games</a>
-  <div class="dropdown-content">
-    <a href="game.html">Memory Game</a>
-    <a href="game2.html">Bash the Mole !</a>
-  </div>
-  </li>
-</ul>
+<div class="sticky">
+  <ul>
+    <li><a href="index.html">Intoduction</a></li>
+    <li><a href="EarlyLife.html">Early Life</a></li>
+    <li><a href="Education.html">Education</a></li>
+    <li><a href="Works.html">Works</a></li>
+    <li><a href="Recognition.html">Recognition</a></li>
+    <li class="dropdown" style="float:right">
+      <a class="dropbtn" style="background-color: Blue">Play Games</a>
+    <div class="dropdown-content">
+      <a href="game.html">Memory Game</a>
+      <a href="game2.html">Bash the Mole !</a>
+    </div>
+    </li>
+  </ul>
+</div>
 <h2 class="ran">Birth</h1>
 <br>
 <p>Born on 29th Feb of 2000, at a gloomy place called Hakooma.</p>
