--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
     <br><br>
     <p id="fixp">Click on the button corresponding to part of his life you want to know</p>
     <br><hr>
-
+<div class="sticky">
 <ul>
   <li><a href="index.html">Intoduction</a></li>
   <li><a href="EarlyLife.html">Early Life</a></li>
@@ -24,6 +24,7 @@
   </div>
   </li>
 </ul>
+</div>
 <h1 class="ran"><b>Schooling</b></h1>
 <br>
 <p>Moulder studied in various <i>Army schools</i> across the country.</p>
